--- a/packages/prisma-wrapper/package.json
+++ b/packages/prisma-wrapper/package.json
@@ -7,6 +7,9 @@
     "scripts": {
         "build": "tsc"
     },
+    "files": [
+        "dist"
+    ],
     "exports": {
         "./prisma-extended": {
             "import": "./dist/extended-prisma.js",
@@ -14,12 +17,12 @@
             "default": "./dist/extended-prisma.js"
         },
         "./prisma-client": {
-            "import": "./prisma/generated/client/index.js",
-            "types": "./prisma/generated/client/index.d.ts",
-            "default": "./prisma/generated/client/index.js"
+            "import": "./dist/prisma-generated/client.js",
+            "types": "./dist/prisma-generated/client.d.ts",
+            "default": "./dist/prisma-generated/client.js"
         },
         "./prisma-types": {
-            "types": "./prisma/generated/client/index.d.ts",
+            "types": "./dist/prisma-generated/client.d.ts",
             "default": "./dist/empty.js"
         },
         "./json-types": {
@@ -34,10 +37,12 @@
         }
     },
     "dependencies": {
-        "@prisma/client": "^6.16.2"
+        "@prisma/adapter-pg": "^7.0.0",
+        "@prisma/client": "^7.0.0",
+        "dotenv": "^17.2.3"
     },
     "devDependencies": {
-        "prisma": "^6.12.0",
+        "prisma": "^7.0.0",
         "typescript": "latest"
     }
 }
