--- a/packages/prisma-wrapper/tsconfig.json
+++ b/packages/prisma-wrapper/tsconfig.json
@@ -1,9 +1,9 @@
 {
-    "include": ["src"],
-    "exclude": ["node_modules", "dist"],
+    "include": ["./src"],
+    "exclude": ["./node_modules", "./dist"],
     "compilerOptions": {
-        "outDir": "dist",
-        "rootDir": "src",
+        "outDir": "./dist",
+        "rootDir": "./src",
         "module": "nodenext",
         "moduleResolution": "nodenext",
         "declaration": true,
