--- a/packages/prisma-wrapper/tsconfig.json
+++ b/packages/prisma-wrapper/tsconfig.json
@@ -12,14 +12,18 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
+        "allowImportingTsExtensions": false,
+
+        "skipLibCheck": false,
+        "skipDefaultLibCheck": false,
+
         "target": "ES2023",
         "sourceMap": true,
         "baseUrl": "./",
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*", "./dist/*"]
         },
         "incremental": true,
-        "skipLibCheck": true,
         "strictNullChecks": true,
         "forceConsistentCasingInFileNames": true,
         "noImplicitAny": false,
