--- a/packages/prisma-wrapper/tsconfig.json
+++ b/packages/prisma-wrapper/tsconfig.json
@@ -19,10 +19,7 @@
 
         "target": "ES2023",
         "sourceMap": true,
-        "baseUrl": "./",
-        "paths": {
-            "@/*": ["./src/*", "./dist/*"]
-        },
+        "baseUrl": "./", // alias doesnt work for package that consumes this package as library
         "incremental": true,
         "strictNullChecks": true,
         "forceConsistentCasingInFileNames": true,
