--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,7 +27,7 @@
         "@nestjs/serve-static": "^5.0.3",
         "@nestjs/swagger": "^11.2.0",
         "@nestjs/throttler": "^6.4.0",
-        "@sigauth/prisma-wrapper": "workspace:*",
+        "@sigauth/generics": "workspace:*",
         "axios": "^1.11.0",
         "bcryptjs": "^3.0.2",
         "class-transformer": "^0.5.1",
@@ -82,4 +82,3 @@
         "testEnvironment": "node"
     }
 }
-
