--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -25,7 +25,7 @@
         "@radix-ui/react-switch": "^1.2.6",
         "@radix-ui/react-tabs": "^1.1.13",
         "@radix-ui/react-tooltip": "^1.2.8",
-        "@sigauth/prisma-wrapper": "workspace:*",
+        "@sigauth/generics": "workspace:*",
         "@tailwindcss/vite": "^4.1.13",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
