--- a/packages/generics/tsconfig.json
+++ b/packages/generics/tsconfig.json
@@ -19,7 +19,7 @@
 
         "target": "es2024",
         "sourceMap": true,
-        "baseUrl": "./", // alias doesnt work for package that consumes this package as library
+        "baseUrl": ".", // alias doesnt work for package that consumes this package as library
         "incremental": true,
         "strictNullChecks": true,
         "forceConsistentCasingInFileNames": true,
