--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -32,6 +32,7 @@
         "cmdk": "^1.1.1",
         "dayjs": "^1.11.18",
         "lucide-react": "^0.544.0",
+        "monaco-editor": "^0.55.1",
         "next-themes": "^0.4.6",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
