--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -34,6 +34,7 @@
         "class-validator": "^0.14.2",
         "cookie-parser": "^1.4.7",
         "dayjs": "^1.11.13",
+        "esbuild": "^0.27.1",
         "glob": "^13.0.0",
         "jose": "^6.1.1",
         "reflect-metadata": "^0.2.2",
