--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,6 +24,7 @@
         "@nestjs/config": "^4.0.2",
         "@nestjs/core": "^11.0.1",
         "@nestjs/platform-express": "^11.1.9",
+        "@nestjs/schedule": "^6.1.0",
         "@nestjs/serve-static": "^5.0.3",
         "@nestjs/swagger": "^11.2.0",
         "@nestjs/throttler": "^6.4.0",
