--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -27,12 +27,14 @@
         "@radix-ui/react-tooltip": "^1.2.8",
         "@sigauth/generics": "workspace:*",
         "@tailwindcss/vite": "^4.1.13",
+        "@tanstack/react-table": "^8.21.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "dayjs": "^1.11.18",
         "lucide-react": "^0.544.0",
         "next-themes": "^0.4.6",
+        "papaparse": "^5.5.3",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-hook-form": "^7.62.0",
@@ -41,6 +43,7 @@
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.13",
         "vaul": "^1.1.2",
+        "xlsx": "^0.18.5",
         "zod": "^4.1.8"
     },
     "devDependencies": {
