--- a/apps/api/.env.template
+++ b/apps/api/.env.template
@@ -1,5 +1,8 @@
+DATABASE_URL=postgresql://USERNAME:PASSWORD@0.0.0.0:5432/sigauth
+
 FRONTEND_URL=http://localhost:5713
 SESSION_EXPIRATION_OFFSET=30 # days
 AUTHORIZATION_CHALLENGE_EXPIRATION_OFFSET=5 # minutes
 OIDC_ACCESS_TOKEN_EXPIRATION_OFFSET=10 # minutes
 OIDC_REFRESH_TOKEN_EXPIRATION_OFFSET=30 # days
+EXPOSE_SWAGGER=true
