--- a/.env.template
+++ b/.env.template
@@ -5,4 +5,5 @@ SESSION_EXPIRATION_OFFSET=30 # days
 AUTHORIZATION_CHALLENGE_EXPIRATION_OFFSET=5 # minutes
 OIDC_ACCESS_TOKEN_EXPIRATION_OFFSET=10 # minutes
 OIDC_REFRESH_TOKEN_EXPIRATION_OFFSET=30 # days
-EXPOSE_SWAGGER=true
+EXPOSE_SWAGGER=false
+API_RATE_LIMIT=15 # requests per minute (we recommend not increasing this value unless necessary)
