--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -44,7 +44,7 @@
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.13",
         "vaul": "^1.1.2",
-        "xlsx": "^0.18.5",
+        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
         "zod": "^4.1.8"
     },
     "devDependencies": {
