--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,6 +38,8 @@
         "esbuild": "^0.27.1",
         "glob": "^13.0.0",
         "jose": "^6.1.1",
+        "knex": "^3.1.0",
+        "pg": "^8.16.3",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
         "speakeasy": "^2.0.0"
