--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,8 +15,8 @@
         "chalk": "^5.6.2",
         "dotenv": "^17.2.3",
         "enquirer": "^2.4.1",
-        "knex": "^3.1.0",
         "ora": "^9.0.0",
+        "pg": "^8.16.3",
         "ts-morph": "^27.0.2"
     },
     "devDependencies": {
@@ -26,6 +26,7 @@
         "@types/chai": "^4",
         "@types/mocha": "^10",
         "@types/node": "^18",
+        "@types/pg": "^8.16.0",
         "chai": "^4",
         "eslint": "^9",
         "eslint-config-oclif": "^6",
