--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,15 +1,21 @@
 {
-  "compilerOptions": {
-    "declaration": true,
-    "module": "Node16",
-    "outDir": "dist",
-    "rootDir": "src",
-    "strict": true,
-    "target": "es2022",
-    "moduleResolution": "node16"
-  },
-  "include": ["./src/**/*"],
-  "ts-node": {
-    "esm": true
-  }
+    "compilerOptions": {
+        "declaration": true,
+        "module": "Node16",
+        "outDir": "dist",
+        "rootDir": "src",
+        "strict": true,
+        "target": "es2022",
+        "moduleResolution": "node16"
+    },
+    "include": [
+        "./src/**/*",
+        "../../apps/api/src/internal/client/asset-types.ts",
+        "../../apps/api/src/internal/client/helper.ts",
+        "../../apps/api/src/internal/client/sigauth.client.ts"
+    ],
+    "ts-node": {
+        "esm": true
+    }
 }
+
