--- a/packages/generics/package.json
+++ b/packages/generics/package.json
@@ -26,16 +26,6 @@
     "main": "./dist/extended-prisma.js",
     "types": "./dist/extended-prisma.d.ts",
     "exports": {
-        ".": {
-            "types": "./dist/extended-prisma.d.ts",
-            "import": "./dist/extended-prisma.js",
-            "default": "./dist/extended-prisma.js"
-        },
-        "./json": {
-            "types": "./dist/json.types.d.ts",
-            "import": "./dist/json.types.js",
-            "default": "./dist/json.types.js"
-        },
         "./protected": {
             "types": "./dist/protected.types.d.ts",
             "import": "./dist/protected.types.js",
@@ -50,15 +40,19 @@
             "types": "./dist/asset.types.d.ts",
             "import": "./dist/asset.types.js",
             "default": "./dist/asset.types.js"
+        },
+        "./database/*": {
+            "types": "./dist/database/*.d.ts",
+            "import": "./dist/database/*.js",
+            "default": "./dist/database/*.js"
         }
     },
     "dependencies": {
-        "@prisma/adapter-pg": "^7.1.0",
-        "@prisma/client": "^7.1.0",
-        "dotenv": "^17.2.3"
+        "dotenv": "^17.2.3",
+        "knex": "^3.1.0",
+        "pg": "^8.16.3"
     },
     "devDependencies": {
-        "prisma": "^7.1.0",
         "typescript": "latest"
     }
 }
