--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "@sigauth/generics",
-    "version": "0.1.7",
+    "name": "@sigauth/sdk",
+    "version": "0.1.0",
     "type": "module",
-    "description": "SigAuth Generic Types for the core integration",
+    "description": "SigAuth SDK for auth, generic types and managing asset types and their assets.",
     "keywords": [
         "sigauth",
         "core",
         "authentication",
         "authorization",
-        "types"
+        "types",
+        "sdk"
     ],
     "bugs": {
         "url": "https://github.com/SigAuth/core/issues"
@@ -40,17 +41,10 @@
             "types": "./dist/asset.types.d.ts",
             "import": "./dist/asset.types.js",
             "default": "./dist/asset.types.js"
-        },
-        "./database/*": {
-            "types": "./dist/database/*.d.ts",
-            "import": "./dist/database/*.js",
-            "default": "./dist/database/*.js"
         }
     },
     "dependencies": {
-        "dotenv": "^17.2.3",
-        "knex": "^3.1.0",
-        "pg": "^8.16.3"
+        "dotenv": "^17.2.3"
     },
     "devDependencies": {
         "typescript": "latest"
