chore: rename webapp to admin dashboard

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,7 +1,9 @@
 {
-    "name": "webapp",
+    "name": "@sigauth/admin-dashboard",
     "version": "1.0.0",
     "type": "module",
+    "private": true,
+    "description": "SigAuth Admin Dashboard Application to manage your SigAuth instance",
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
