--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "description": "SigAuth Admin Dashboard Application to manage your SigAuth instance",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --port 5174",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview"
