--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -2,6 +2,8 @@
     "name": "@sigauth/sdk",
     "version": "0.1.0",
     "type": "module",
+    "homepage": "https://sigauth.org",
+    "author": "Ben Hacker",
     "description": "SigAuth SDK for auth, generic types and managing asset types and their assets.",
     "keywords": [
         "sigauth",
@@ -11,6 +13,9 @@
         "types",
         "sdk"
     ],
+    "bin": {
+        "sigauth": "./bin/run.js"
+    },
     "bugs": {
         "url": "https://github.com/SigAuth/core/issues"
     },
@@ -19,13 +24,13 @@
         "url": "git+https://github.com/SigAuth/core.git"
     },
     "scripts": {
-        "build": "tsc"
+        "build": "shx rm -rf dist tsconfig.tsbuildinfo && tsc -b"
     },
     "files": [
-        "dist"
+        "dist",
+        "bin",
+        "oclif.manifest.json"
     ],
-    "main": "./dist/extended-prisma.js",
-    "types": "./dist/extended-prisma.d.ts",
     "exports": {
         "./protected": {
             "types": "./dist/protected.types.d.ts",
@@ -41,13 +46,32 @@
             "types": "./dist/asset.types.d.ts",
             "import": "./dist/asset.types.js",
             "default": "./dist/asset.types.js"
+        },
+        "./config": {
+            "types": "./dist/cli/config/config.types.d.ts",
+            "import": "./dist/cli/config/config.types.js",
+            "default": "./dist/cli/config/config.types.js"
         }
     },
     "dependencies": {
-        "dotenv": "^17.2.3"
+        "@oclif/core": "^4.8.0",
+        "chalk": "^5.6.2",
+        "enquirer": "^2.4.1",
+        "ora": "^9.0.0",
+        "shx": "^0.3.4",
+        "ts-morph": "^27.0.2"
     },
     "devDependencies": {
+        "@types/node": "^25.2.2",
         "typescript": "latest"
+    },
+    "oclif": {
+        "bin": "sigauth",
+        "dirname": "sigauth",
+        "commands": "./dist/cli/commands",
+        "plugins": [],
+        "topicSeparator": " ",
+        "topics": {}
     }
 }
 
