feat: added SigAuthSDK Client generation without core interaction

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -51,6 +51,11 @@
             "types": "./dist/cli/config/config.types.d.ts",
             "import": "./dist/cli/config/config.types.js",
             "default": "./dist/cli/config/config.types.js"
+        },
+        "./utils": {
+            "types": "./dist/cli/utils.d.ts",
+            "import": "./dist/cli/utils.js",
+            "default": "./dist/cli/utils.js"
         }
     },
     "dependencies": {
