--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
         "@nestjs/common": "^11.0.1",
         "@nestjs/config": "^4.0.2",
         "@nestjs/core": "^11.0.1",
+        "@nestjs/event-emitter": "^3.0.1",
         "@nestjs/platform-express": "^11.1.9",
         "@nestjs/schedule": "^6.1.0",
         "@nestjs/serve-static": "^5.0.3",
@@ -101,4 +102,3 @@
         }
     }
 }
-
