fix: add registry to package.json

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -13,6 +13,10 @@
         "types",
         "sdk"
     ],
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
+    },
     "bin": {
         "sigauth": "./bin/run.js"
     },
