--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,6 +40,7 @@
         "glob": "^13.0.3",
         "jose": "^6.1.3",
         "knex": "^3.1.0",
+        "neo4j-driver": "^6.0.1",
         "pg": "^8.18.0",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.2",
