--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,17 +4,19 @@
     "compilerOptions": {
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
-        "esModuleInterop": true, // CommonJS-Module sauber importieren
-        "resolveJsonModule": true, // .json-Dateien importierbar
+        "esModuleInterop": true,
+        "resolveJsonModule": true, 
         "allowSyntheticDefaultImports": true,
         "strict": true,
-
+        "paths": {
+            "@/*": ["./src/*"]
+        },
+        "outDir": "./dist",
         "declaration": true,
         "removeComments": true,
         "emitDecoratorMetadata": true,
         "target": "es2024",
-        "baseUrl": ".",
-        "outDir": "./dist",
+        "rootDir": "./src",
         "sourceMap": true,
         "strictNullChecks": true,
         "noImplicitAny": false,
