--- a/apps/login-gateway/package.json
+++ b/apps/login-gateway/package.json
@@ -34,7 +34,7 @@
         "eslint-plugin-react-refresh": "^0.4.26",
         "globals": "^16.5.0",
         "tw-animate-css": "^1.4.0",
-        "typescript": "~5.9.3",
+        "typescript": "^5.9.3",
         "typescript-eslint": "^8.55.0",
         "vite": "^7.3.1"
     }
