--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -56,19 +56,31 @@
             "types": "./dist/cli/utils.d.ts",
             "import": "./dist/cli/utils.js",
             "default": "./dist/cli/utils.js"
+        },
+        "./jose": {
+            "types": "./dist/lib/jose.d.ts",
+            "import": "./dist/lib/jose.js",
+            "default": "./dist/lib/jose.js"
+        },
+        "./authentication": {
+            "types": "./dist/authentication.utils.d.ts",
+            "import": "./dist/authentication.utils.js",
+            "default": "./dist/authentication.utils.js"
         }
     },
     "dependencies": {
         "@oclif/core": "^4.8.0",
         "chalk": "^5.6.2",
+        "dotenv": "^17.3.1",
         "enquirer": "^2.4.1",
+        "jose": "^6.1.3",
         "ora": "^9.3.0",
         "shx": "^0.3.4",
         "ts-morph": "^27.0.2"
     },
     "devDependencies": {
         "@types/node": "^25.2.3",
-        "typescript": "latest"
+        "typescript": "^5.9.3"
     },
     "oclif": {
         "bin": "sigauth",
