--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -2,6 +2,7 @@
     "include": ["./src"],
     "exclude": ["./node_modules", "./dist"],
     "compilerOptions": {
+        "types": ["node"],
         "outDir": "./dist",
         "rootDir": "./src",
         "module": "nodenext",
@@ -19,7 +20,6 @@
 
         "target": "es2024",
         "sourceMap": true,
-        "baseUrl": ".", // alias doesnt work for package that consumes this package as library
         "incremental": true,
         "strictNullChecks": true,
         "forceConsistentCasingInFileNames": true,
@@ -28,3 +28,4 @@
         "noFallthroughCasesInSwitch": false
     }
 }
+
